[package]
name = "misfire-sys"
version = "0.2.0"
authors = [
    "Nathan Kent <nkent2@cs.rochester.edu>",
    "Marco Boneberger <m.boneberger@tu-bs.de>",
    "Clayton Ramsey <shrimpfried@rice.edu>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/claytonwramsey/misfire"
description = "Compiles bullet3 and exposes rust bindings to the C API"
categories = ["science::robotics", "simulation"]
keywords = ["pybullet", "bullet", "bullet3", "physics", "robotics"]
exclude = [
    "bullet3/libbullet3/data/*",
    "!bullet3/libbullet3/data/sphere8.mtl",
    "bullet3/libbullet3/examples/pybullet",
    "bullet3/libbullet3/examples/ThirdPartyLibs/openvr",
    "bullet3/libbullet3/docs",
    "bullet3/libbullet3/test",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "misfire_sys"
src = "src/lib.rs"


[build-dependencies]
cmake = { version = "0.1.42", default-features = false }
