[package]
name = "misfire"
version = "0.2.0"
authors = [
    "Nathan Kent <nkent2@cs.rochester.edu>",
    "Marco Boneberger <m.boneberger@tu-bs.de>",
    "Clayton Ramsey <shrimpfried@rice.edu>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/claytonwramsey/misfire"
description = "Rust interface to the Bullet Physics SDK simmilar to PyBullet"
categories = ["science::robotics", "simulation"]
keywords = ["pybullet", "bullet", "bullet3", "physics", "robotics"]
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "misfire"
path = "src/lib.rs"

[[example]]
name = "contact_friction"
path = "examples/contact_friction.rs"

[[example]]
name = "dump_log"
path = "examples/dump_log.rs"

[[example]]
name = "get_aabb"
path = "examples/get_aabb.rs"

[[example]]
name = "get_closest_points"
path = "examples/get_closest_points.rs"

[[example]]
name = "kuka_with_cube"
path = "examples/kuka_with_cube.rs"

[[example]]
name = "kuka_with_cube_playback"
path = "examples/kuka_with_cube_playback.rs"

[[example]]
name = "log_minitaur"
path = "examples/log_minitaur.rs"

[[example]]
name = "profile_timing"
path = "examples/profile_timing.rs"

[[example]]
name = "save_and_restore_states"
path = "examples/save_and_restore_states.rs"

[[example]]
name = "jacobian"
path = "examples/jacobian.rs"

[[example]]
name = "constraint"
path = "examples/constraint.rs"

[[example]]
name = "panda_demo"
path = "examples/panda_demo.rs"

[[example]]
name = "panda_camera_demo"
path = "examples/panda_camera_demo.rs"

[[example]]
name = "heightfield"
path = "examples/heightfield.rs"

[[example]]
name = "create_visual_shape"
path = "examples/create_visual_shape.rs"

[[example]]
name = "create_multi_body_batch"
path = "examples/create_multi_body_batch.rs"

[[example]]
name = "hello_rubullet"
path = "examples/hello_rubullet.rs"

[[example]]
name = "inverse_dynamics"
path = "examples/inverse_dynamics.rs"

[dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
image = { version = "0.25.6", default-features = false }
misfire-sys = { path = "../misfire-sys" }
bitflags = { version = "2.9.1", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0", default-features = false }
rand = { version = "0.9.1", default-features = false, features = [
    "thread_rng",
] }
structopt = { version = "0.3", default-features = false }
